--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^7.0.3",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.39",
+    "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
@@ -46,8 +48,13 @@
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
-    "extends": "universe/native",
-    "root": true
+    "extends": "@react-native-community",
+    "rules": {
+      "no-unused-vars": "off",
+      "no-undef": "off",
+      "react/react-in-jsx-scope": "off",
+      "prettier/prettier": "off"
+    }
   },
   "private": true
 }
