--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "firebase": "^10.5.2",
+    "firebase": "^10.14.1",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -33,7 +33,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
