--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.3.0",
@@ -21,8 +22,10 @@
     "expo": "^52.0.39",
     "expo-checkbox": "^4.0.1",
     "expo-constants": "~17.0.8",
+    "expo-font": "^13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
