--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.3",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "expo": "^52.0.39",
     "expo-checkbox": "^4.0.1",
