--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/bottom-tabs": "^7.3.9",
+    "@react-navigation/native": "^7.1.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "expo": "^52.0.39",
@@ -39,16 +40,18 @@
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "3.16.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
